src/objects/MUSW__Project2__c.object
<CustomObject>
    <description>Project container</description>
    <fields>
        <fullName>Close_Date__c</fullName>
        <inlineHelpText>Projects that are no longer valid/closed or stop selling interests in</inlineHelpText>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>County_Name__c</fullName>
        <label>County Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adams</fullName>
                    <default>true</default>
                    <label>Adams</label>
                </value>
                <value>
                    <fullName>Ashland</fullName>
                </value>
                <value>
                    <fullName>Barron</fullName>
                </value>
                <value>
                    <fullName>Bayfield</fullName>
                </value>
                <value>
                    <fullName>Brown</fullName>
                </value>
                <value>
                    <fullName>Buffalo</fullName>
                </value>
                <value>
                    <fullName>Burnett</fullName>
                </value>
                <value>
                    <fullName>Calumet</fullName>
                </value>
                <value>
                    <fullName>Chippewa</fullName>
                </value>
                <value>
                    <fullName>Clark</fullName>
                </value>
                <value>
                    <fullName>Columbia</fullName>
                </value>
                <value>
                    <fullName>Crawford</fullName>
                </value>
                <value>
                    <fullName>Dane</fullName>
                </value>
                <value>
                    <fullName>Dodge</fullName>
                </value>
                <value>
                    <fullName>Door</fullName>
                </value>
                <value>
                    <fullName>Douglas</fullName>
                </value>
                <value>
                    <fullName>Dunn</fullName>
                </value>
                <value>
                    <fullName>Eau</fullName>
                </value>
                <value>
                    <fullName>Florence</fullName>
                </value>
                <value>
                    <fullName>Fond du Lac</fullName>
                </value>
                <value>
                    <fullName>Forest</fullName>
                </value>
                <value>
                    <fullName>Grant</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Green Lake</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Iron</fullName>
                </value>
                <value>
                    <fullName>Jackson</fullName>
                </value>
                <value>
                    <fullName>Jefferson</fullName>
                </value>
                <value>
                    <fullName>Juneau</fullName>
                </value>
                <value>
                    <fullName>Kenosha</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Deed_Verified__c</fullName>
        <label>Date Deed Verified</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Division_Name__c</fullName>
        <label>Division Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Driving_Direction__c</fullName>
        <label>Driving Direction</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Fire_Dept_Name__c</fullName>
        <label>Fire Dept Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geo_Latitude__c</fullName>
        <label>Geo Latitude</label>
        <precision>16</precision>
        <scale>12</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Geo_Longitude__c</fullName>
        <label>Geo Longitude</label>
        <precision>16</precision>
        <scale>12</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Govt_Lot__c</fullName>
        <label>Govt Lot</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Intervals__c</fullName>
        <label>Intervals</label>
        <precision>17</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Land_Owner_Type__c</fullName>
        <label>Land Owner Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>License</label>
        <referenceTo>MUSW__License2__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lot__c</fullName>
        <label>Lot</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__AlertCode__c</fullName>
        <label>Alert Code</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MUSW__Alert_Indicator__c</fullName>
        <formula>HYPERLINK(&quot;/apex/musw__TaskAlert?id=&quot;+ Id, IMAGE( 
CASE( MUSW__AlertCode__c, 
0, &quot;/img/samples/light_green.gif&quot;, 
1, &quot;/img/samples/light_yellow.gif&quot;, 
2, &quot;/img/samples/light_red.gif&quot;, 
&quot;https://letterbatch.mybasicgov.com/img/light_off.gif&quot;), 
&quot;none&quot;), &quot;_top&quot;) + IF(MUSW__Parcel__c != null, &quot; Par: &quot; + HYPERLINK(&quot;/apex/musw__TaskAlert?id=&quot;+  MUSW__Parcel__c, IMAGE( 
CASE( MUSW__Parcel__r.MUSW__AlertCode__c, 
0, &quot;/img/samples/light_green.gif&quot;, 
1, &quot;/img/samples/light_yellow.gif&quot;, 
2, &quot;/img/samples/light_red.gif&quot;, 
&quot;https://letterbatch.mybasicgov.com/img/light_off.gif&quot;), 
&quot;none&quot;), &quot;_top&quot;),&quot;&quot;)</formula>
        <inlineHelpText>Click to view/add/update your Alerts</inlineHelpText>
        <label>Alert</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Description__c</fullName>
        <inlineHelpText>Objective or proposal details</inlineHelpText>
        <label>Description</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MUSW__End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MUSW__Geolocation__c</fullName>
        <label>Geolocation</label>
        <scale>9</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>MUSW__Latitude__c</fullName>
        <label>Latitude</label>
        <precision>17</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MUSW__Longitude__c</fullName>
        <label>Longitude</label>
        <precision>17</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MUSW__Parcel_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>as indicated on parcel</inlineHelpText>
        <label>Primary Owner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Projects as Primary Owner</relationshipLabel>
        <relationshipName>Parcel_Owner_Project2s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Parcel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parcel</label>
        <referenceTo>MUSW__Parcel__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Project2s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Project2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>MUSW__Project2__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Project2s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Appealed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Muni_Code__c</fullName>
        <label>Muni Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Muni_Type__c</fullName>
        <label>Muni Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Municipality_Name__c</fullName>
        <label>Municipality Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Municipality_Type__c</fullName>
        <label>Municipality Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Open_Date__c</fullName>
        <inlineHelpText>Date Project was opened/allowed to start selling into project</inlineHelpText>
        <label>Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Address__c</fullName>
        <label>Project Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <label>Project Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quarter__c</fullName>
        <label>Quarter</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Range__c</fullName>
        <label>Range</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <label>Release</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <label>Section</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Area_Code__c</fullName>
        <label>Site Area Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Id__c</fullName>
        <defaultValue>&apos;System Number&apos;</defaultValue>
        <externalId>true</externalId>
        <label>Site Id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Site_Phone_Number__c</fullName>
        <label>Site Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Subdivision__c</fullName>
        <label>Subdivision</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Id__c</fullName>
        <label>Tax Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Town__c</fullName>
        <label>Town</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Units__c</fullName>
        <label>Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>MUSW__All</fullName>
        <columns>NAME</columns>
        <columns>MUSW__Alert_Indicator__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>MUSW__Status__c</columns>
        <columns>Site_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>